git commit -m "add test + README.md + json postman import"
